...
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toBottomOf="@+id/im_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/im_icon" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recy_courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_marginTop="@dimen/space_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
